syntax = "proto3";
package pb_auth;
option go_package = "./pb_auth;pb_auth";

enum PLATFORM_TYPE
{
  UNKNOWN_PLATFORM_TYPE = 0;
  IOS = 1;
  ANDROID = 2;
  MAC = 3;
  WINDOWS = 4;
  WEB = 5;
}

message SignUpReq {
  PLATFORM_TYPE reg_platform = 1; //注册平台
  string nickname = 2; //昵称
  string password = 3; //密码
  string firstname = 4; //firstname 名
  string lastname = 5; //lastname 姓名
  string gender = 6;  // 性别
  string birth_ts = 7; // 生日
  string email = 8; //email 邮箱
  string mobile = 9; //手机号
  string avatar_key = 10; //头像
  int64 city_id = 11; //城市ID
  int64 code = 12; // 验证码
  string udid = 13; // udid
  int64 server_id = 14; // server id
}

message SignUpResp {
  int32 code = 1;
  string msg = 2;
  UserInfo user_info = 3;
  Token access_token = 4;
  Token refresh_token = 5;
}

message UserInfo {
  string nickname = 1; // 昵称
  string firstname = 2; // firstname
  string lastname = 3;  // lastname
  int32 gender = 4; // 性别
  int64 birth_ts = 5; // 生日
  string email = 6; //email
  string mobile = 7; //手机号
}

message Token {
  // @inject_tag: json:"token"
  string token = 1; //用户token
  // @inject_tag: json:"expire"
  int64 expire = 2; // token过期时间戳（秒）

}

service Auth {
  rpc SignUp(SignUpReq) returns(SignUpResp);
}

